--- a/styles/results.css
+++ b/styles/results.css
@@ -87,6 +87,13 @@ h1 {
     margin-right: 10px;
 }
 
+/* Label Styles */
+#save-score-form label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
 .hide {
     display: none;
 }
